<resources>
    <string name="app_name">X7 Remote</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- SharedPreference keys -->
    <string name="pref_update">pref_update</string>
    <string name="pref_video_mode_key">video_mode</string>
    <string name="pref_video_resolution_key">video_resolution</string>
    <string name="pref_video_quality_key">video_quality</string>
    <string name="pref_video_autorec_key">video_autorec</string>

    <string name="pref_photo_mode_key">photo_mode</string>
    <string name="pref_photo_resolution_key">photo_resolution</string>
    <string name="pref_photo_quality_key">photo_quality</string>

    <string name="pref_effects_timestap_key">effects_timestap</string>
    <string name="pref_effects_aqua_mode_key">effects_aqua_mode</string>
    <string name="pref_effects_fov_key">effects_fov</string>
    <string name="pref_effects_ae_metering_key">effects_ae_metering</string>

    <string name="pref_system_tv_mode_key">system_tv_mode</string>
    <string name="pref_system_mic_volume_key">system_mic_volume</string>
    <string name="pref_system_buzzer_key">system_buzzer</string>
    <string name="pref_system_led_key">system_led</string>
    <string name="pref_system_auto_lcd_off_key">system_auto_lcd_off</string>
    <string name="pref_system_auto_power_off_key">system_auto_power_off</string>

    <!-- Common image quality options -->
    <string name="pref_title_image_quality">Quality</string>
    <string-array name="pref_image_quality_titles">
        <item>Super Fine</item>
        <item>Fine</item>
        <item>Normal</item>
    </string-array>
    <string-array name="pref_image_quality_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>


    <!-- Settings for Video -->
    <string name="pref_header_video">Video</string>

    <!-- Video Mode options -->
    <string name="pref_title_video_mode">Mode</string>
    <string-array name="pref_video_mode_titles">
        <item>Manual</item>
        <item>Multi-file 1 min</item>
        <item>Multi-file 5 min</item>
        <item>Multi-file 10 min</item>

        <item>Multi-file 30 min</item>
        <item>Duration 1 min</item>
        <item>Duration 5 min</item>
        <item>Duration 10 min</item>

        <item>Duration 30 min</item>
        <item>Timelapse 1 sec</item>
        <item>Timelapse 3 sec</item>
        <item>Timelapse 5 sec</item>

        <item>Timelapse 10 sec</item>
        <item>Timelapse 30 sec</item>
        <item>Looping</item>
    </string-array>
    <string-array name="pref_video_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>

        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>

        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>

        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

    <!-- Video Resolution options -->
    <string name="pref_title_video_resolution">Resolution</string>
    <string-array name="pref_video_resolution_titles_ntsc">
        <item>1920x1080 60 FPS 16:9</item>
        <item>1920x1080 30 FPS 16:9</item>
        <item>1600x1200 60 FPS 4:3</item>
        <item>1600x1200 30 FPS 4:3</item>

        <item>1280x720 120 FPS 16:9 – 4x SlowMotion</item>
        <item>1280x720 60 FPS 16:9</item>
        <item>1280x720 30 FPS 16:9</item>
        <item>848x480 240 FPS 16:9 – 8x SlowMotion</item>
    </string-array>
    <string-array name="pref_video_resolution_titles_pal">
        <item>1920x1080 50 FPS 16:9</item>
        <item>1920x1080 25 FPS 16:9</item>
        <item>1600x1200 50 FPS 4:3</item>
        <item>1600x1200 25 FPS 4:3</item>

        <item>1280x720 100 FPS 16:9 – 4x SlowMotion</item>
        <item>1280x720 50 FPS 16:9</item>
        <item>1280x720 25 FPS 16:9</item>
        <item>848x480 200 FPS 16:9 – 8x SlowMotion</item>
    </string-array>
    <string-array name="pref_video_resolution_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>

        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <!-- Video Auto Rec options -->
    <string name="pref_title_video_autorec">Auto Record after startup</string>
    <string-array name="pref_video_autorec_titles">
        <item>Off</item>
        <item>Immediately</item>
        <item>5 sec</item>
        <item>10 sec</item>
    </string-array>
    <string-array name="pref_video_autorec_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Settings for Photo -->
    <string name="pref_header_photo">Photo</string>

    <string name="pref_title_photo_mode">Mode</string>
    <string-array name="pref_photo_mode_titles">
        <item>Manual</item>
        <item>Timelapse 0.5 sec</item>
        <item>Timelapse 1 sec</item>
        <item>Timelapse 3 sec</item>

        <item>Timelapse 5 sec</item>
        <item>Timelapse 10 sec</item>
        <item>Timelapse 30 sec</item>
        <item>Timelapse 60 sec</item>

        <item>Burst</item>
        <item>Timer 5 sec</item>
        <item>Timer 10 sec</item>
    </string-array>
    <string-array name="pref_photo_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>

        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>

        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="pref_title_photo_resolution">Resolution</string>
    <string-array name="pref_photo_resolution_titles">
        <item>12M 4000x3000 4:3</item>
        <item>8.5M 3648x2432 3:2</item>
        <item>7.2M 3648x2052 16:9</item>
    </string-array>
    <string-array name="pref_photo_resolution_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Settings for Effects -->
    <string name="pref_header_effects">Effects</string>

    <string name="pref_title_effects_timestamp">Timestamp</string>
    <string name="pref_title_effects_aqua_mode">Aqua mode</string>

    <string name="pref_title_effects_fov">FOV</string>
    <string-array name="pref_effects_fov_titles">
        <item>Wide</item>
        <item>Medium</item>
        <item>Narrow</item>
    </string-array>
    <string-array name="pref_effects_fov_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_effects_ae_metering">Auto Exposure Metering</string>
    <string-array name="pref_effects_ae_metering_titles">
        <item>Center</item>
        <item>Average</item>
        <item>Spot</item>
    </string-array>
    <string-array name="pref_effects_ae_metering_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Settings for System -->
    <string name="pref_header_system">System</string>

    <!-- TV System options -->
    <string name="pref_title_system_tv_mode">TV System</string>
    <string-array name="pref_system_tv_mode_titles">
        <item>NTSC</item>
        <item>PAL</item>
    </string-array>
    <string-array name="pref_system_tv_mode_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_system_mic_volume">Microphone recording volume</string>
    <string-array name="pref_system_mic_volume_titles">
        <item>Off</item>
        <item>30%</item>
        <item>60%</item>
        <item>100%</item>
    </string-array>
    <string-array name="pref_system_mic_volume_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Boolean options -->
    <string name="pref_title_system_buzzer">Buzzer</string>
    <string name="pref_title_system_led">LED</string>
    <string name="pref_title_system_lcd_off">Auto LCD off</string>
    <string name="pref_title_system_power_off">Auto Power off</string>
    <string name="record">Record</string>
    <string name="snapshot">Snapshot</string>
    <string name="settings">Settings</string>
    <string name="off">OFF</string>
    <string name="image_preview_may_not_work_correctly_during_recording">Image preview may not work correctly during recording!</string>
    <string name="stop">Stop</string>
</resources>
