<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_system_tv_mode_key"
        android:entries="@array/pref_system_tv_mode_titles"
        android:entryValues="@array/pref_system_tv_mode_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_system_tv_mode" />

    <ListPreference
        android:key="@string/pref_system_mic_volume_key"
        android:entries="@array/pref_system_mic_volume_titles"
        android:entryValues="@array/pref_system_mic_volume_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_system_mic_volume" />

    <SwitchPreference
        android:key="@string/pref_system_buzzer_key"
        android:title="@string/pref_title_system_buzzer" />

    <SwitchPreference
        android:key="@string/pref_system_led_key"
        android:title="@string/pref_title_system_led" />

    <SwitchPreference
        android:key="@string/pref_system_auto_lcd_off_key"
        android:title="@string/pref_title_system_lcd_off" />

    <SwitchPreference
        android:key="@string/pref_system_auto_power_off_key"
        android:title="@string/pref_title_system_power_off" />

</PreferenceScreen>
