<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/pref_video_mode_key"
        android:entries="@array/pref_video_mode_titles"
        android:entryValues="@array/pref_video_mode_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_video_mode" />

    <ListPreference
        android:key="@string/pref_video_resolution_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_video_resolution" />

    <ListPreference
        android:key="@string/pref_video_quality_key"
        android:entries="@array/pref_image_quality_titles"
        android:entryValues="@array/pref_image_quality_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_image_quality" />

    <ListPreference
        android:key="@string/pref_video_autorec_key"
        android:entries="@array/pref_video_autorec_titles"
        android:entryValues="@array/pref_video_autorec_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_video_autorec" />

</PreferenceScreen>
