<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/pref_photo_mode_key"
        android:entries="@array/pref_photo_mode_titles"
        android:entryValues="@array/pref_photo_mode_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_photo_mode" />

    <ListPreference
        android:key="@string/pref_photo_resolution_key"
        android:entries="@array/pref_photo_resolution_titles"
        android:entryValues="@array/pref_photo_resolution_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_photo_resolution" />

    <ListPreference
        android:key="@string/pref_photo_quality_key"
        android:entries="@array/pref_image_quality_titles"
        android:entryValues="@array/pref_image_quality_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_image_quality" />

</PreferenceScreen>
